teste/SyntacticAnalyserParser.java
// Generated from SyntacticAnalyser.g4 by ANTLR 4.13.2
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue", "this-escape"})
public class SyntacticAnalyserParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.2", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		MAIN=1, VOID=2, CLASS=3, RETURN=4, IF=5, ELSE=6, WHILE=7, PARENTHESIS_OPEN=8, 
		PARENTHESIS_CLOSE=9, CURLY_BRACES_OPEN=10, CURLY_BRACES_CLOSE=11, COMMA=12, 
		SEMICOLON=13, BOOL=14, INT=15, AND=16, OR=17, NOT=18, PLUS=19, MULTIPLY=20, 
		ATTRIBUITION_OPERATOR=21, LESS_TAN=22, GREATER_THAN=23, EQUALS=24, NUMBER=25, 
		TRUE=26, FALSE=27, IDENTIFIER=28, NEWLINE=29;
	public static final int
		RULE_type = 0, RULE_method_type = 1, RULE_term = 2, RULE_b_term = 3, RULE_boolean_op = 4, 
		RULE_a_term = 5, RULE_aritmetic_op = 6, RULE_expression = 7, RULE_method_call = 8, 
		RULE_else = 9, RULE_ifelse = 10, RULE_while = 11, RULE_param = 12, RULE_method_declaration = 13, 
		RULE_attr_declaration = 14, RULE_attribuition_op = 15, RULE_commands = 16, 
		RULE_main_function = 17, RULE_class = 18, RULE_prog = 19;
	private static String[] makeRuleNames() {
		return new String[] {
			"type", "method_type", "term", "b_term", "boolean_op", "a_term", "aritmetic_op", 
			"expression", "method_call", "else", "ifelse", "while", "param", "method_declaration", 
			"attr_declaration", "attribuition_op", "commands", "main_function", "class", 
			"prog"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'main'", "'void'", "'class'", "'return'", "'if'", "'else'", "'while'", 
			"'('", "')'", "'{'", "'}'", "','", "';'", "'bool'", "'int'", "'and'", 
			"'or'", "'not'", "'+'", "'*'", "'='", "'<'", "'>'", "'=='", null, "'True'", 
			"'False'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "MAIN", "VOID", "CLASS", "RETURN", "IF", "ELSE", "WHILE", "PARENTHESIS_OPEN", 
			"PARENTHESIS_CLOSE", "CURLY_BRACES_OPEN", "CURLY_BRACES_CLOSE", "COMMA", 
			"SEMICOLON", "BOOL", "INT", "AND", "OR", "NOT", "PLUS", "MULTIPLY", "ATTRIBUITION_OPERATOR", 
			"LESS_TAN", "GREATER_THAN", "EQUALS", "NUMBER", "TRUE", "FALSE", "IDENTIFIER", 
			"NEWLINE"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "SyntacticAnalyser.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public SyntacticAnalyserParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TypeContext extends ParserRuleContext {
		public TerminalNode BOOL() { return getToken(SyntacticAnalyserParser.BOOL, 0); }
		public TerminalNode INT() { return getToken(SyntacticAnalyserParser.INT, 0); }
		public TypeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterType(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitType(this);
		}
	}

	public final TypeContext type() throws RecognitionException {
		TypeContext _localctx = new TypeContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_type);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			_la = _input.LA(1);
			if ( !(_la==BOOL || _la==INT) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Method_typeContext extends ParserRuleContext {
		public TypeContext type() {
			return getRuleContext(TypeContext.class,0);
		}
		public TerminalNode VOID() { return getToken(SyntacticAnalyserParser.VOID, 0); }
		public Method_typeContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_type; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterMethod_type(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitMethod_type(this);
		}
	}

	public final Method_typeContext method_type() throws RecognitionException {
		Method_typeContext _localctx = new Method_typeContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_method_type);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(44);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case BOOL:
			case INT:
				{
				setState(42);
				type();
				}
				break;
			case VOID:
				{
				setState(43);
				match(VOID);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class TermContext extends ParserRuleContext {
		public TerminalNode TRUE() { return getToken(SyntacticAnalyserParser.TRUE, 0); }
		public TerminalNode FALSE() { return getToken(SyntacticAnalyserParser.FALSE, 0); }
		public TerminalNode IDENTIFIER() { return getToken(SyntacticAnalyserParser.IDENTIFIER, 0); }
		public TerminalNode PARENTHESIS_OPEN() { return getToken(SyntacticAnalyserParser.PARENTHESIS_OPEN, 0); }
		public Boolean_opContext boolean_op() {
			return getRuleContext(Boolean_opContext.class,0);
		}
		public TerminalNode PARENTHESIS_CLOSE() { return getToken(SyntacticAnalyserParser.PARENTHESIS_CLOSE, 0); }
		public TerminalNode NOT() { return getToken(SyntacticAnalyserParser.NOT, 0); }
		public TermContext term() {
			return getRuleContext(TermContext.class,0);
		}
		public Method_callContext method_call() {
			return getRuleContext(Method_callContext.class,0);
		}
		public TermContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterTerm(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitTerm(this);
		}
	}

	public final TermContext term() throws RecognitionException {
		TermContext _localctx = new TermContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_term);
		try {
			setState(56);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(46);
				match(TRUE);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(47);
				match(FALSE);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(48);
				match(IDENTIFIER);
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(49);
				match(PARENTHESIS_OPEN);
				setState(50);
				boolean_op();
				setState(51);
				match(PARENTHESIS_CLOSE);
				}
				break;
			case 5:
				enterOuterAlt(_localctx, 5);
				{
				setState(53);
				match(NOT);
				setState(54);
				term();
				}
				break;
			case 6:
				enterOuterAlt(_localctx, 6);
				{
				setState(55);
				method_call();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class B_termContext extends ParserRuleContext {
		public List<TermContext> term() {
			return getRuleContexts(TermContext.class);
		}
		public TermContext term(int i) {
			return getRuleContext(TermContext.class,i);
		}
		public List<TerminalNode> AND() { return getTokens(SyntacticAnalyserParser.AND); }
		public TerminalNode AND(int i) {
			return getToken(SyntacticAnalyserParser.AND, i);
		}
		public List<TerminalNode> EQUALS() { return getTokens(SyntacticAnalyserParser.EQUALS); }
		public TerminalNode EQUALS(int i) {
			return getToken(SyntacticAnalyserParser.EQUALS, i);
		}
		public List<TerminalNode> GREATER_THAN() { return getTokens(SyntacticAnalyserParser.GREATER_THAN); }
		public TerminalNode GREATER_THAN(int i) {
			return getToken(SyntacticAnalyserParser.GREATER_THAN, i);
		}
		public List<TerminalNode> LESS_TAN() { return getTokens(SyntacticAnalyserParser.LESS_TAN); }
		public TerminalNode LESS_TAN(int i) {
			return getToken(SyntacticAnalyserParser.LESS_TAN, i);
		}
		public B_termContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_b_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterB_term(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitB_term(this);
		}
	}

	public final B_termContext b_term() throws RecognitionException {
		B_termContext _localctx = new B_termContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_b_term);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(58);
			term();
			setState(63);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 29425664L) != 0)) {
				{
				{
				setState(59);
				_la = _input.LA(1);
				if ( !((((_la) & ~0x3f) == 0 && ((1L << _la) & 29425664L) != 0)) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(60);
				term();
				}
				}
				setState(65);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Boolean_opContext extends ParserRuleContext {
		public List<B_termContext> b_term() {
			return getRuleContexts(B_termContext.class);
		}
		public B_termContext b_term(int i) {
			return getRuleContext(B_termContext.class,i);
		}
		public List<TerminalNode> OR() { return getTokens(SyntacticAnalyserParser.OR); }
		public TerminalNode OR(int i) {
			return getToken(SyntacticAnalyserParser.OR, i);
		}
		public Boolean_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_boolean_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterBoolean_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitBoolean_op(this);
		}
	}

	public final Boolean_opContext boolean_op() throws RecognitionException {
		Boolean_opContext _localctx = new Boolean_opContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_boolean_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(66);
			b_term();
			setState(71);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==OR) {
				{
				{
				{
				setState(67);
				match(OR);
				}
				setState(68);
				b_term();
				}
				}
				setState(73);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class A_termContext extends ParserRuleContext {
		public TerminalNode IDENTIFIER() { return getToken(SyntacticAnalyserParser.IDENTIFIER, 0); }
		public TerminalNode NUMBER() { return getToken(SyntacticAnalyserParser.NUMBER, 0); }
		public Method_callContext method_call() {
			return getRuleContext(Method_callContext.class,0);
		}
		public A_termContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_a_term; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterA_term(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitA_term(this);
		}
	}

	public final A_termContext a_term() throws RecognitionException {
		A_termContext _localctx = new A_termContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_a_term);
		try {
			setState(77);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(74);
				match(IDENTIFIER);
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(75);
				match(NUMBER);
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(76);
				method_call();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Aritmetic_opContext extends ParserRuleContext {
		public List<A_termContext> a_term() {
			return getRuleContexts(A_termContext.class);
		}
		public A_termContext a_term(int i) {
			return getRuleContext(A_termContext.class,i);
		}
		public List<TerminalNode> PLUS() { return getTokens(SyntacticAnalyserParser.PLUS); }
		public TerminalNode PLUS(int i) {
			return getToken(SyntacticAnalyserParser.PLUS, i);
		}
		public List<TerminalNode> MULTIPLY() { return getTokens(SyntacticAnalyserParser.MULTIPLY); }
		public TerminalNode MULTIPLY(int i) {
			return getToken(SyntacticAnalyserParser.MULTIPLY, i);
		}
		public Aritmetic_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_aritmetic_op; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterAritmetic_op(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitAritmetic_op(this);
		}
	}

	public final Aritmetic_opContext aritmetic_op() throws RecognitionException {
		Aritmetic_opContext _localctx = new Aritmetic_opContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_aritmetic_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(79);
			a_term();
			setState(84);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==PLUS || _la==MULTIPLY) {
				{
				{
				setState(80);
				_la = _input.LA(1);
				if ( !(_la==PLUS || _la==MULTIPLY) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				setState(81);
				a_term();
				}
				}
				setState(86);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ExpressionContext extends ParserRuleContext {
		public Aritmetic_opContext aritmetic_op() {
			return getRuleContext(Aritmetic_opContext.class,0);
		}
		public Boolean_opContext boolean_op() {
			return getRuleContext(Boolean_opContext.class,0);
		}
		public Method_callContext method_call() {
			return getRuleContext(Method_callContext.class,0);
		}
		public ExpressionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_expression; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterExpression(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitExpression(this);
		}
	}

	public final ExpressionContext expression() throws RecognitionException {
		ExpressionContext _localctx = new ExpressionContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_expression);
		try {
			setState(90);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,6,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(87);
				aritmetic_op();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(88);
				boolean_op();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(89);
				method_call();
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Method_callContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(SyntacticAnalyserParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(SyntacticAnalyserParser.IDENTIFIER, i);
		}
		public TerminalNode PARENTHESIS_OPEN() { return getToken(SyntacticAnalyserParser.PARENTHESIS_OPEN, 0); }
		public TerminalNode PARENTHESIS_CLOSE() { return getToken(SyntacticAnalyserParser.PARENTHESIS_CLOSE, 0); }
		public List<TerminalNode> COMMA() { return getTokens(SyntacticAnalyserParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(SyntacticAnalyserParser.COMMA, i);
		}
		public Method_callContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_method_call; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterMethod_call(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitMethod_call(this);
		}
	}

	public final Method_callContext method_call() throws RecognitionException {
		Method_callContext _localctx = new Method_callContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_method_call);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(92);
			match(IDENTIFIER);
			setState(93);
			match(PARENTHESIS_OPEN);
			setState(102);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==IDENTIFIER) {
				{
				setState(94);
				match(IDENTIFIER);
				setState(99);
				_errHandler.sync(this);
				_la = _input.LA(1);
				while (_la==COMMA) {
					{
					{
					setState(95);
					match(COMMA);
					setState(96);
					match(IDENTIFIER);
					}
					}
					setState(101);
					_errHandler.sync(this);
					_la = _input.LA(1);
				}
				}
			}

			setState(104);
			match(PARENTHESIS_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ElseContext extends ParserRuleContext {
		public TerminalNode ELSE() { return getToken(SyntacticAnalyserParser.ELSE, 0); }
		public TerminalNode CURLY_BRACES_OPEN() { return getToken(SyntacticAnalyserParser.CURLY_BRACES_OPEN, 0); }
		public TerminalNode CURLY_BRACES_CLOSE() { return getToken(SyntacticAnalyserParser.CURLY_BRACES_CLOSE, 0); }
		public List<CommandsContext> commands() {
			return getRuleContexts(CommandsContext.class);
		}
		public CommandsContext commands(int i) {
			return getRuleContext(CommandsContext.class,i);
		}
		public ElseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_else; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterElse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitElse(this);
		}
	}

	public final ElseContext else_() throws RecognitionException {
		ElseContext _localctx = new ElseContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_else);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(106);
			match(ELSE);
			setState(107);
			match(CURLY_BRACES_OPEN);
			setState(111);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 268484788L) != 0)) {
				{
				{
				setState(108);
				commands();
				}
				}
				setState(113);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(114);
			match(CURLY_BRACES_CLOSE);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class IfelseContext extends ParserRuleContext {
		public TerminalNode IF() { return getToken(SyntacticAnalyserParser.IF, 0); }
		public TerminalNode PARENTHESIS_OPEN() { return getToken(SyntacticAnalyserParser.PARENTHESIS_OPEN, 0); }
		public Boolean_opContext boolean_op() {
			return getRuleContext(Boolean_opContext.class,0);
		}
		public TerminalNode PARENTHESIS_CLOSE() { return getToken(SyntacticAnalyserParser.PARENTHESIS_CLOSE, 0); }
		public TerminalNode CURLY_BRACES_OPEN() { return getToken(SyntacticAnalyserParser.CURLY_BRACES_OPEN, 0); }
		public TerminalNode CURLY_BRACES_CLOSE() { return getToken(SyntacticAnalyserParser.CURLY_BRACES_CLOSE, 0); }
		public List<CommandsContext> commands() {
			return getRuleContexts(CommandsContext.class);
		}
		public CommandsContext commands(int i) {
			return getRuleContext(CommandsContext.class,i);
		}
		public ElseContext else_() {
			return getRuleContext(ElseContext.class,0);
		}
		public IfelseContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_ifelse; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterIfelse(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitIfelse(this);
		}
	}

	public final IfelseContext ifelse() throws RecognitionException {
		IfelseContext _localctx = new IfelseContext(_ctx, getState());
		enterRule(_localctx, 20, RULE_ifelse);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(116);
			match(IF);
			setState(117);
			match(PARENTHESIS_OPEN);
			setState(118);
			boolean_op();
			setState(119);
			match(PARENTHESIS_CLOSE);
			setState(120);
			match(CURLY_BRACES_OPEN);
			setState(124);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & 268484788L) != 0)) {
				{
				{
				setState(121);
				commands();
				}
				}
				setState(126);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(127);
			match(CURLY_BRACES_CLOSE);
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==ELSE) {
				{
				setState(128);
				else_();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class WhileContext extends ParserRuleContext {
		public TerminalNode WHILE() { return getToken(SyntacticAnalyserParser.WHILE, 0); }
		public TerminalNode PARENTHESIS_OPEN() { return getToken(SyntacticAnalyserParser.PARENTHESIS_OPEN, 0); }
		public Boolean_opContext boolean_op() {
			return getRuleContext(Boolean_opContext.class,0);
		}
		public TerminalNode PARENTHESIS_CLOSE() { return getToken(SyntacticAnalyserParser.PARENTHESIS_CLOSE, 0); }
		public TerminalNode CURLY_BRACES_OPEN() { return getToken(SyntacticAnalyserParser.CURLY_BRACES_OPEN, 0); }
		public TerminalNode CURLY_BRACES_CLOSE() { return getToken(SyntacticAnalyserParser.CURLY_BRACES_CLOSE, 0); }
		public List<CommandsContext> commands() {
			return getRuleContexts(CommandsContext.class);
		}
		public CommandsContext commands(int i) {
			return getRuleContext(CommandsContext.class,i);
		}
		public WhileContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_while; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).enterWhile(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof SyntacticAnalyserListener ) ((SyntacticAnalyserListener)listener).exitWhile(this);
		}
	}
